<resources>
    <string name="app_name">MiDocOnline</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_in">SignInActivity</string>

    <!-- Facebook -->
    <string name="facebook_app_id">539997896164728</string>
    <string name="facebook_login">Facebook</string>

     <!--sign up form text-->
    <string name="email_text">EMAIL</string>
    <string name="name_text">NAME</string>
    <string name="surname_text">SURNAME</string>
    <string name="password_text">PASSWORD</string>
    <string name="mobile_text">MOBILE</string>
    <string name="birthday_text">BIRTHDAY</string>
    <string name="city_text">CITY</string>
    <string name="country_text">COUNTRY</string>
    <string name="male_text">MALE</string>
    <string name="female_text">FEMALE</string>
    <string name="specialist_lic_text">SPECIALITY LICENCE</string>
    <string name="request_approval_text">REQUEST APPROVAL</string>
    <string name="sign_in_text">SIGN IN</string>
    <!--sign up form Error text-->
    <string name="email_error">Please provide Email</string>
    <string name="name_error">Please provide Name</string>
    <string name="password_error">Please provide Password</string>
    <string name="speciality_licence_error">Please provide Speciality Licence</string>
    <string name="surname_error">Please provide Surname</string>
    <string name="mobile_error">Please provide Mobile Number</string>
    <string name="city_error">Please provide City</string>
    <string name="country_error">Please provide Country</string>
    <string name="birthday_error">Please provide Birthday</string>
    <string name="title_activity_sign_in_activiity">SignInActivity</string>
    <string name="no_internet_connection">You Don\'t have internet connection pleas try again! </string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_ask_for_registration">AskForRegistration</string>
    <string name="title_activity_answer_emeregency_call_screen">AnswerEmeregencyCallScreen</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_history_chat">HistoryChatActivity</string>

    <array name="month_label_array">
        <item>SU</item>
        <item>MO</item>
        <item>TU</item>
        <item>WE</item>
        <item>TH</item>
        <item>FR</item>
        <item>ST</item>
    </array>

    <string name="logout_confirm_msg">Do you really want to logout ?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="title_activity_terms_and_condition">TermsAndConditionActivity</string>
    <string name="title_activity_payment_option">PaymentOptionActivity</string>


</resources>
